k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astro-agent
  template:
    metadata:
      labels:
        app: astro-agent
    spec:
      containers:
        - name: astro-agent
          image: astro-agent
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthcheck/db
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
