k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astro-agent-service
spec:
  type: LoadBalancer
  selector:
    app: astro-agent
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
