k8s/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: astro-agent-gateway
  namespace: astro-ai-agent-ns
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        options:
          networking.gke.io/pre-shared-certs: astro-agent-certificate
      allowedRoutes:
        namespaces:
          from: Same
