k8s/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: astro-agent-route
  namespace: astro-ai-agent-ns
spec:
  parentRefs:
    - name: astro-agent-gateway
  hostnames:
    - "astroapp.nononsensedev.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: astro-agent-service
          port: 80
